ajout de remove

--- a/styles.scss
+++ b/styles.scss
@@ -29,6 +29,9 @@ margin-top: 1%;
     background-color: rgb(83, 88, 187);
     
 }
+.divImg{
+    display: block;
+}
 
 .popUp{
     position: fixed;
