--- a/styles.scss
+++ b/styles.scss
@@ -46,7 +46,7 @@ margin-top: 1%;
 .popUp{
     position: fixed;
     margin: 0;
-    padding: 5%;
+    padding: 3%;
     top:20%;
     left:20%;
     width: 60vw;
@@ -54,7 +54,8 @@ margin-top: 1%;
     background: white;
     border: 5px solid palevioletred;
     border-radius: 12px;
-     text-align: left;
+    text-align: left;
+    box-sizing: border-box;
     h3{
         text-align: center;
     }
@@ -63,3 +64,6 @@ margin-top: 1%;
        color:palevioletred;
     }
 }
+.d-none {
+    display: none;
+  }
